--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                                 <a class="nav-link" href="#vs">Vision & Mission</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Events
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="events.html">Upcoming Events</a></li>
-                                    <li><a class="dropdown-item" href="events.html">Past Events</a></li>
+                                    <li><a class="dropdown-item" href="upcoming.html">Upcoming Events</a></li>
+                                    <li><a class="dropdown-item" href="past.html">Past Events</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
