--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
                 <form action="">
                     <input type="text" placeholder="Full Name">
                     <input type="email" placeholder="Email">
+                    <input type="text" placeholder="Message">
                     <removethis-textarea cols="30" rows="3" placeholder="Your Message">
                   </removethis-textarea>
                     <button  type="submit">Send Message</button>
