--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +27,7 @@
       <div class="col-md-1"></div> <!-- Blank Space -->
       <div class="col-md-2">
         <div class="gallery-item">
-          <img src="images/Kathakali 2.png" alt="Image 2">
+          <img src="images/kathakali.jpg" alt="Image 2">
           <div class="gallery-caption">kathakali</div>
         </div>
       </div>
@@ -38,9 +41,8 @@
       <div class="col-md-1"></div> <!-- Blank Space -->
     </div>
 
-    
-        <div class="col-md-1"></div> <!-- Blank Space -->
         <div class="row">
+        <div class="col-md-1"></div> <!-- Blank Space -->
         <div class="col-md-2">
           <div class="gallery-item">
             <img src="images/vishu.jpeg" alt="Image 4">
@@ -79,6 +81,7 @@
             <img src="images/kathakali.jpg" alt="Image 2">
             <div class="gallery-caption">kathakali</div>
           </div>
+          
         </div>
         <div class="col-md-1"></div> <!-- Blank Space -->
         <div class="col-md-2">
