--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,21 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   
    <link rel="stylesheet" href="gallery.css">
+   <link rel="stylesheet" href="index.html">
+   <link rel="stylesheet" href="index.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   
 </head>
 <body>
-    <h1 >Welcome to Gallery Hub</h1>
-  <div class="container mt-5">
+
+  <div class="close-btn">
+    <a href="index.html"><i class="fas fa-times"></i></a>
+</div>
+
+ <h1 >Welcome to Gallery Hub</h1>
+  <div class="container mt-4">
     <div class="row">
       <div class="col-md-1"></div> <!-- Blank Space -->
       <div class="col-md-2">
@@ -98,5 +108,8 @@
 
   <!-- Bootstrap JS (Optional) -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <footer>
+    <p>&copy; 2024 My Website. All rights reserved.</p>
+</footer>
 </body>
 </html>
