--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,11 @@
 
 </head>
 <body>
-    
+
+    <div class="close-btn">
+        <a href="index.html"><i class="fas fa-times"></i></a>
+    </div>
+
     <div class="main">
         <div class="container">
             <div class="image">
@@ -45,6 +49,10 @@
 
 
         </div>
-   <footer></footer>
+
+        <footer>
+            <p>&copy; 2024 My Website. All rights reserved.</p>
+        </footer>
+    
 </body>
 </html>
