--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <section class="header">
-        <nav class="navbar bg-green navbar-expand-lg fixed-top ">
+        <nav class="navbar bg-green navbar-expand-lg fixed-top  ">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="/">
@@ -38,7 +38,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                    <div class="flex flex-col text-center w-full">
+                    <div class="flex flex-col text-center w-full ">
                         <a class="navbar-brand" href="/">
                             <div class="fs-1">കലാ PHILLY ASSOCIATION</div>
                         </a>
@@ -81,6 +81,7 @@
 
                 </div>
             </div>
+        </nav>
         </nav>
     </section>
 
@@ -219,17 +220,30 @@
     <section class="container my-5 py-3" id="vs">
         <div>
             <h1>Vision and Mission</h1>
-            <p>There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by injected
-                humour, or randomised words which don't look even slightly believable.
-                If you are going to use a passage of Lorem Ipsum, you need to be sure
-                there isn't anything embarrassing hidden in the middle of text. All
-                the Lorem Ipsum generators on the Internet tend to repeat predefined
-                chunks as necessary, making this the first true generator on the Internet.
-                It uses a dictionary of over 200 Latin words, combined with a handful of
-                model sentence structures, to generate Lorem Ipsum which looks reasonable.
-                The generated Lorem Ipsum is therefore always free from repetition, injected
-                humour, or non-characteristic words etc.</p>
+            <p>Vision :
+                Kalaa is a Not for profit [501(C) 3] organization formed in
+                1979 and incorporated in the Commonwealth of Pennsylva-
+                nia. It operates under a constitution and By-laws approved
+                by the General Body. Officers of the organization are elected
+                annually according to its Bylaws.</p>
+                Mission :
+                a) To conduct and coordinate charitable, educational, literary,
+                   scientific, cultural and social activities for the Indian
+                   community of Kerala origin in the Delaware Valley and to
+                   help the poor and the needy here in America and abroad
+                b) To create and promote a better understanding and friendlier
+                   relationship among the members of the above community
+                   and to develop appreciation, understanding, and love of
+                   the art and literature of India
+                c) To bring about closer understanding between the Kerala
+                   immigrant community and the American community at large
+                d) To engage in other activities incidental or connected with
+                   the foregoing objectives or in advancement thereof as permitted
+                   under the regulations for Not-For-Profit corporations;
+                   and
+                e) To impart political and civic education and awareness
+                   among the members of the asso
+ 
         </div>
 
 
