--- a/upcoming.html
+++ b/upcoming.html
@@ -16,9 +16,70 @@
 </head>
 <body>
 
-  <div class="close-btn">
-    <a href="index.html"><i class="fas fa-times"></i></a>
-</div>
+
+  <section class="header">
+    <nav class="navbar bg-green navbar-expand-lg fixed-top ">
+        <div class="container-fluid">
+            <!-- Logo -->
+            <a class="navbar-brand text-decoration-none" href="/">
+                <img src="images/Logo.png" alt="Logo">
+            </a>
+            <a class="navbar-brand" href="/">
+                <h1></h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <div class="flex flex-col text-center w-full">
+                    <a class="navbar-brand" href="/">
+                        <div class="fs-1">കലാ PHILLY ASSOCIATION</div>
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About Us</a>
+                        </li>
+                       
+                        <li class="nav-item">
+                            <a class="nav-link" href="#vs">Vision & Mission</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Events
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="upcoming.html">Upcoming Events</a></li>
+                                <li><a class="dropdown-item" href="past.html">Past Events</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="team.html">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="news.html">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+        </div>
+    </nav>
+    </nav>
+</section>
+
 
     <section id="events">
         <div class="container">
