--- a/gallery.html
+++ b/gallery.html
@@ -92,8 +92,8 @@
 </section>
 
 
-<div class="container">
- <h1 >Welcome to Gallery Hub</h1>
+<div class="container mt-3 py-5">
+ <h1 >Gallery</h1>
 
  
   <p>
@@ -104,7 +104,7 @@
     <img src="images/gallery5.jpg">
     <img src="images/gallery3.jpg">
 
-    <h5>----------------Onam Celebration----------------</h5>
+    <h5>Onam Celebration</h5>
     
     
   </p>
@@ -114,7 +114,7 @@
     <img src="images/gallery5.jpg">
     <img src="images/gallery1.jpg">
     <img src="images/gallery4.jpg">
-    <h5>----------------X-mas Celebration----------------</h5>
+    <h5>X-mas Celebration</h5>
   </p>
   
   <p>
@@ -122,7 +122,7 @@
     <img src="images/gallery3.jpg">
     <img src="images/gallery2.jpg">
     <img src="images/gallery4.jpg">
-    <h5>----------------Vishu Celebration----------------</h5>
+    <h5>Vishu Celebration</h5>
   </p>
   
 </div>
