--- a/news.html
+++ b/news.html
@@ -7,17 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="news.css"> 
+    <link rel="stylesheet" href="index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-   
-
+    <style>
+        /* Custom CSS for reducing space in navbar */
+        .navbar-nav {
+            margin-top: 0.25%; /* Adjust margin-right to reduce space */
+        }
+    </style>
 </head>
 <body>
-
-
-    
     <section class="header mt-4">
         <nav class="navbar bg-green navbar-expand-lg fixed-top ">
             <div class="container-fluid">
@@ -38,7 +40,7 @@
                         <a class="navbar-brand" href="/">
                             <div class="fs-1">കലാ PHILLY ASSOCIATION</div>
                         </a>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav mb-2 mb-lg-0"> <!-- Removed me-auto class -->
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
@@ -70,7 +72,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
-
                         </ul>
 
                     </div>
@@ -81,11 +82,10 @@
         </nav>
     </section>
 
-
-    <section class="schedule mt-5"> <!-- Added mt-5 class here -->
+    <section class="schedule mt-5">
         <div class="container" id="news">
             <!-- Event schedule content goes here (calendar model) -->
-            <div class="card d-flex justify-content-center align-items-md-center">
+            <div class="d-flex justify-content-center align-items-md-center">
                 <div class="calendar">
                     <h2><u>News Updates</u></h2>
                     <h4>No News at the moment</h4>
