--- a/upcoming.html
+++ b/upcoming.html
@@ -25,7 +25,7 @@
 <body>
 
   <section class="header">
-    <nav class="navbar bg-green navbar-expand-lg fixed-top">
+    <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand text-decoration-none" href="index.html">
