--- a/aboutus.html
+++ b/aboutus.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/news.css"> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us</title>
+    <link rel="stylesheet" href="css/team.css" />
+    <link rel="stylesheet" href="css/aboutus.css" />
     <link rel="stylesheet" href="css/footer.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-    <style>
-        /* Custom CSS for reducing space in navbar */
-        .navbar-nav {
-            margin-top: 0.25%; /* Adjust margin-right to reduce space */
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
 
     <section class="header">
-        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
+       <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
@@ -36,7 +28,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12">
+                    <div class="col-12 text-center" >
                         <a class="navbar-brand text-decoration-none" href="index.html">
                             <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
                         </a>
@@ -85,30 +77,36 @@
         </nav>
     </section>
 
-    <section class="mt-5 pt-5">
-        
-            <div class="d-flex justify-content-center align-items-md-center mt-5">
-                <div class="">
-                    <h1 class="text-center mt-3">Latest News</h1>
-                    <button class="btn btn-primary" type="button" disabled>
-                        <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                        <span role="status">Loading...</span>
-                    </button>
-                </div>
-            </div>
-    </section>
-    
+<!-- Hero Section -->
+<section class="hero-section">
+    <div class="hero-overlay"></div>
+    <div class="hero-text">About Us</div>
+</section>
 
-    <footer class="">
-        <div class="p-3">
-            &copy; 2024 My Website. All rights reserved.
-        </div>
-    </footer>
+<!-- About Section -->
+<section class="about-content container">
+    <div class="about-images">
+        <img src="images/kala.jpg" alt="Team Image 1">
+        <img src="images/kala.jpg" alt="Team Image 2">
+    </div>
+    <div class="about-text">
+        <h2>Who We Are</h2>
+        <p>
+            Kalā Philly Association is a community-driven group committed to celebrating cultural heritage,
+            fostering creativity, and building strong connections among members. Our events, outreach programs,
+            and artistic collaborations are a reflection of our shared passion for community and culture.
+        </p>
+    </div>
+</section>
+<footer class="">
+    <div class="p-3">
+        &copy; 2024 My Website. All rights reserved.
+    </div>
+</footer>
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
