--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <section class="header">
-        <nav class="navbar bg-green navbar-expand-lg fixed-top">
+        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
@@ -48,7 +48,7 @@
                                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">About Us</a>
+                                    <a class="nav-link" href="aboutus.html">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -88,67 +88,62 @@
 
     <div class="mt-5 pt-4" id="home">
 
-        <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+<div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="images/Philadelphia.webp" class="d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Rich heritage, Vibrant present</h3>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/Philadelphia.webp" class="d-block w-100 mt-5 max-h object-fit-cover" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Rich heritage, Vibrant present</h3>
-                        <!-- <p>Some representative placeholder content for the first slide.</p> -->
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/kathakali.jpg" class="d-block w-100 mt-5 max-h object-fit-cover" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3> A Jewel of enchanting beauty and rich cultural heritage</h3>
-                        <!-- <p>Some representative placeholder content for the second slide.</p> -->
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/sadhya.jpg" class="d-block w-100 mt-5 max-h object-fit-cover" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>A Symbol of unity, cultural richness, and the spirit of togetherness</h3>
-                        <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/philadelphia 1.jpg" class="d-block w-100 mt-5 max-h object-fit-cover" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3> Change the world, one kind act at a time</h3>
-                        <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/onam.jpeg" class="d-block w-100 mt-5 max-h object-fit-cover" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3> Every hundred feet the world changes</h3>
-                        <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
+        <div class="carousel-item">
+            <img src="images/kathakali.jpg" class="d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>A Jewel of enchanting beauty and rich cultural heritage</h3>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="images/sadhya.jpg" class="d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>A Symbol of unity, cultural richness, and the spirit of togetherness</h3>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="images/philadelphia 1.jpg" class="d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Change the world, one kind act at a time</h3>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="images/onam.jpeg" class="d-block" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Every hundred feet the world changes</h3>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 
 
         <div class="container  pt-5" id="about">
@@ -260,7 +255,7 @@
 
         <footer class="">
             <div class="p-3">
-                &copy; 2024 My Website. All rights reserved.
+                &copy; 2024 CHRIST INFOTECH. All rights reserved.
             </div>
         </footer>
 
