--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
 
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +88,7 @@
     </section>
 
     <div class="close-btn">
-        <a href="index.html"><i class="fas fa-times"></i></a>
+        <a href="index.html">
     </div>
 
     <div class="main">
