--- a/upcoming.html
+++ b/upcoming.html
@@ -22,10 +22,10 @@
   <section class="header">
     <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
       <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand text-decoration-none" href="index.html">
-          <img src="images/Logo.png" alt="Logo">
-        </a>
+         <!-- Logo -->
+          <a class="navbar-brand text-decoration-none" href="index.html">
+             <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
