--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/Logo.png" alt="Logo">
+                     <img src="images/Logo.png" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -118,7 +118,7 @@
 
     <!-- Popup Modal -->
     <div id="popup-gallery" class="popup hidden">
-        <button class="back-btn" onclick="closeGallery()">← Back to Gallery</button>
+        <button class="back-btn" onclick="closeGallery()">← Back</button>
         <div class="popup-images" id="popup-images"></div>
     </div>
 
