--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 </head>
 
 <body>
-
     <section class="header">
         <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/Logo.png" alt="Logo">
+                    <img src="images/Logo.png" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
