--- a/past.html
+++ b/past.html
@@ -26,7 +26,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand text-decoration-none" href="index.html">
-          <img src="images/Logo.png" alt="Logo">
+           <img src="images/Logo.png" alt="Logo" class="navbar-logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
