--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -81,7 +81,7 @@
     </section>
     <!-- Hero Section -->
     <section class="hero-section position-relative text-white d-flex align-items-center justify-content-center"
-        style="height: 60vh; background: url('images/kala.jpg') center/cover no-repeat;">
+        style="height: 60vh; background:  center/cover no-repeat;">
         <div class="position-absolute top-0 start-0 w-100 h-100 bg-dark bg-opacity-50"></div>
         <h1 class="position-relative z-1 display-3 fw-bold">About Us</h1>
     </section>
