--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                     <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+                     <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -97,19 +97,24 @@
         <h1 class="gallery-title">Gallery</h1>
 
         <div class="gallery-grid">
-            <section class="event" data-images="gallery1.jpg,gallery2.jpg,gallery3.jpg,gallery4.jpg,gallery5.jpg">
+            <section class="event" data-images="kerala-culture.jpg,sadhya.jpg,gallery3.jpg,gallery4.jpg,pulikali.jpeg">
                 <h5 class="event-title">Onam Celebration</h5>
-                <img src="images/gallery1.jpg" alt="Onam" class="main-img" onclick="openGallery(this)">
+                <img src="images/onam.jpeg" alt="Onam" class="main-img" onclick="openGallery(this)">
             </section>
 
-            <section class="event" data-images="gallery3.jpg,gallery5.jpg,gallery1.jpg,gallery4.jpg">
+            <section class="event" data-images="cake.jpeg,xmas 2.jpeg,santa.jpeg,star.jpeg">
                 <h5 class="event-title">X-mas Celebration</h5>
-                <img src="images/gallery3.jpg" alt="Xmas" class="main-img" onclick="openGallery(this)">
+                <img src="images/xmas image.jpg" alt="Xmas" class="main-img" onclick="openGallery(this)">
             </section>
 
-            <section class="event" data-images="gallery1.jpg,gallery3.jpg,gallery2.jpg,gallery4.jpg">
+            <section class="event" data-images="kannikonna.jpeg,vishu 1.jpeg,katta.jpeg,vishu 3.jpeg">
                 <h5 class="event-title">Vishu Celebration</h5>
-                <img src="images/gallery1.jpg" alt="Vishu" class="main-img" onclick="openGallery(this)">
+                <img src="images/vishu.jpeg" alt="Vishu" class="main-img" onclick="openGallery(this)">
+            </section>
+
+            <section class="event" data-images="eid 1.jpeg,eid 2.jpeg,eid.jpeg,eid 3.jpg">
+                <h5 class="event-title">Eid Celebration</h5>
+                <img src="images/eid.jpeg" alt="Vishu" class="main-img" onclick="openGallery(this)">
             </section>
 
             <!-- Add more events here if needed -->
