--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <script>
         (function () {
             emailjs.init("kranjaly2001@gmail.com"); // Replace with your EmailJS user ID
@@ -33,7 +35,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                     <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -96,8 +98,8 @@
     <div class="main">
         <div class="container contact-section">
             <div class="image">
-                <img src="images/Logo.png" alt="Logo">
-                <a href="membership.html" class="join-btn" target="_blank">Join Us</a>
+                <img src="images/kalaa logo.jpg" alt="Logo">
+                <!-- <a href="membership.html" class="join-btn" target="_blank">Join Us</a> -->
 
             </div>
 
@@ -113,11 +115,21 @@
 
                 <div class="social-icons">
                     <h3>Follow Us</h3>
-                    <a href="https://www.facebook.com/KALAAMalayalee?mibextid=LQQJ4d"><i
-                            class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <div class="icons">
+                        <a href="https://www.facebook.com/KALAAMalayalee?mibextid=LQQJ4d" target="_blank"
+                            aria-label="Facebook">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+                            <i class="fab fa-x-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
                 </div>
+
+
             </div>
         </div>
     </div>
