--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
                     <div class="col-12">
                         <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
                         </a>
                     </div>
                     <div class="col-12 d-flex align-items-center justify-content-center">
@@ -105,31 +105,31 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/Philadelphia.webp" class="d-block" alt="...">
+                    <img src="images/philly-ssjhnbdr9wp0rg4f.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Rich heritage, Vibrant present</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/kathakali.jpg" class="d-block" alt="...">
+                    <img src="images/KathakaliDance.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>A Jewel of enchanting beauty and rich cultural heritage</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/sadhya.jpg" class="d-block" alt="...">
+                    <img src="images/sadhya 2.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>A Symbol of unity, cultural richness, and the spirit of togetherness</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/philadelphia 1.jpg" class="d-block" alt="...">
+                    <img src="images/philadelphia night.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Change the world, one kind act at a time</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/onam.jpeg" class="d-block" alt="...">
+                    <img src="images/524419.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Every hundred feet the world changes</h3>
                     </div>
