--- a/past.html
+++ b/past.html
@@ -26,7 +26,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand text-decoration-none" href="index.html">
-           <img src="images/Logo.png" alt="Logo" class="navbar-logo">
+           <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
         <!-- Event Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/events.jpg" class="card-img-top img-fluid" alt="Convention" />
+            <img src="images/image.png" class="card-img-top img-fluid" alt="Convention" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Convention</h3>
               <p class="card-text text-secondary text-center">
@@ -106,7 +106,7 @@
         <!-- Event Card 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/event1.jpg" class="card-img-top img-fluid" alt="Carrom" />
+            <img src="images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Carrom</h3>
               <p class="card-text text-secondary text-center">
@@ -119,7 +119,7 @@
         <!-- Event Card 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/event2.jpg" class="card-img-top img-fluid" alt="Charity" />
+            <img src="images/event1.png" class="card-img-top img-fluid" alt="Charity" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Charity</h3>
               <p class="card-text text-secondary text-center">
@@ -132,7 +132,7 @@
         <!-- Event Card 4 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/event 3.jpg" class="card-img-top img-fluid" alt="Onam" />
+            <img src="images/event1.png" class="card-img-top img-fluid" alt="Onam" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Onam</h3>
               <p class="card-text text-secondary text-center">
@@ -145,7 +145,7 @@
         <!-- Event Card 5 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/event4.jpg" class="card-img-top img-fluid" alt="Onam" />
+            <img src="images/image.png" class="card-img-top img-fluid" alt="Onam" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Onam</h3>
               <p class="card-text text-secondary text-center">
@@ -158,7 +158,7 @@
         <!-- Event Card 6 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/event5.jpg" class="card-img-top img-fluid" alt="Carrom" />
+            <img src="images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Carrom</h3>
               <p class="card-text text-secondary text-center">
