--- a/aboutus.html
+++ b/aboutus.html
@@ -31,24 +31,24 @@
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
                     <div class="col-12 text-center">
                         <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
                         </a>
                     </div>
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="navbar-brand">
                             <ul class="navbar-nav mb-2 mb-lg-0  ">
                                 <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">About Us</a>
+                                    <a class="nav-link active" href="aboutus.html">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         Events
                                     </a>
@@ -79,7 +79,11 @@
             </div>
         </nav>
     </section>
+
+
     <!-- Hero Section -->
+
+
     <section class="hero-section position-relative text-white d-flex align-items-center justify-content-center"
         style="height: 60vh; background:  center/cover no-repeat;">
         <div class="position-absolute top-0 start-0 w-100 h-100 bg-dark bg-opacity-50"></div>
