--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
                     <div class="col-12">
                         <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
                         </a>
                     </div>
                     <div class="col-12 d-flex align-items-center justify-content-center">
@@ -61,7 +61,7 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         Events
                                     </a>
@@ -71,7 +71,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="gallery.html">Gallery</a>
+                                    <a class="nav-link active" href="gallery.html">Gallery</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="team.html">Team</a>
@@ -97,7 +97,7 @@
         <h1 class="gallery-title">Gallery</h1>
 
         <div class="gallery-grid">
-            <section class="event" data-images="kerala-culture.jpg,sadhya.jpg,gallery3.jpg,gallery4.jpg,pulikali.jpeg">
+            <section class="event" data-images="kerala-culture.jpg,gallery3.jpg,gallery4.jpg,pulikali.jpeg">
                 <h5 class="event-title">Onam Celebration</h5>
                 <img src="images/onam.jpeg" alt="Onam" class="main-img" onclick="openGallery(this)">
             </section>
