--- a/past.html
+++ b/past.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
           <div class="col-12">
             <a class="navbar-brand text-decoration-none" href="index.html">
-              <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+              <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
             </a>
           </div>
           <div class="col-12 d-flex align-items-center justify-content-center">
@@ -52,7 +52,7 @@
                   <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                  <a class="nav-link dropdown-toggle active" href="#events" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Events
                   </a>
