--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
                     <div class="col-12 text-center">
                         <a class="navbar-brand text-decoration-none justify-content-center" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
                         </a>
                     </div>
                     <div class="col-12 d-flex align-items-center justify-content-center">
@@ -62,7 +62,7 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         Events
                                     </a>
@@ -81,7 +81,7 @@
                                     <a class="nav-link" href="news.html">News</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link active" href="contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="membership.html">Membership</a>
