--- a/upcoming.html
+++ b/upcoming.html
@@ -16,16 +16,17 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
   <section class="header">
     <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
       <div class="container-fluid">
-         <!-- Logo -->
-          <a class="navbar-brand text-decoration-none" href="index.html">
-             <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
-          </a>
+        <!-- Logo -->
+        <a class="navbar-brand text-decoration-none" href="index.html">
+          <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,7 +34,7 @@
         <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
           <div class="col-12">
             <a class="navbar-brand text-decoration-none" href="index.html">
-              <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
+              <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
             </a>
           </div>
           <div class="col-12 d-flex align-items-center justify-content-center">
@@ -50,7 +51,7 @@
                   <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                  <a class="nav-link dropdown-toggle active" href="#events" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Events
                   </a>
@@ -82,6 +83,8 @@
     </nav>
   </section>
 
+
+
   <section id="events" class="py-5 mb-5 bg-light">
     <div class="container">
       <h1 class="text-center fw-bold mb-5 text-warning">Upcoming Events</h1>
@@ -92,10 +95,43 @@
           <div class="card shadow border-0 h-100">
             <img src="images/image.png" class="card-img-top img-fluid" alt="Convention" />
             <div class="card-body">
-              <h3 class="card-title text-center text-dark">Convention</h3>
+              <h3 class="card-title text-center text-dark">Onam Celebration</h3>
               <p class="card-text text-secondary text-center">
-                Join our annual cultural convention celebrating community, heritage, and creativity.
+                Date: 15th September 2024<br>
+                Venue: Community Hall, 123 Main St, Philadelphia, PA
               </p>
+              <div class="text-center">
+                <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#onamModal">Details</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="onamModal" tabindex="-1" aria-labelledby="onamModalLabel" aria-hidden="true">
+         <div class="modal-dialog modal-fullscreen modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title fw-bold" id="onamModalLabel">Onam Celebration - Event Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <img src="images/image.png" class="img-fluid rounded mb-3" alt="Onam Event Image">
+                <p>
+                  Join us for a vibrant Onam celebration featuring traditional Kerala cuisine, cultural performances,
+                  games, and activities for all ages.
+                  <br><br>
+                  📅 <strong>Date:</strong> 15th September 2024<br>
+                  📍 <strong>Venue:</strong> Community Hall, 123 Main St, Philadelphia, PA
+                </p>
+                <p>
+                  This event brings together the community in a colorful and joyous atmosphere. Traditional attire is
+                  encouraged.
+                </p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
             </div>
           </div>
         </div>
@@ -132,7 +168,7 @@
             <img src="images/event1.png" class="card-img-top img-fluid" alt="Onam" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Onam</h3>
-              <p class="card-text text-secondary text-center">  
+              <p class="card-text text-secondary text-center">
                 Celebrate Onam with traditional food, games, and performances.
               </p>
             </div>
@@ -179,6 +215,20 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openEventDetails(id) {
+      document.getElementById(id).classList.remove("d-none");
+      document.getElementById("events").style.display = "none";
+    }
+
+    function closeEventDetails() {
+      document.querySelector(".event-popup").classList.add("d-none");
+      document.getElementById("events").style.display = "block";
+    }
+  </script>
+
+
 
 </body>
 
