--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,8 @@
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
                     <div class="col-12 text-center">
                         <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
+                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware
+                                Valley</span>
                         </a>
                     </div>
                     <div class="col-12 d-flex align-items-center justify-content-center">
@@ -48,8 +49,8 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="#events" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
                                         Events
                                     </a>
                                     <ul class="dropdown-menu">
@@ -82,33 +83,23 @@
 
 
     <!-- Hero Section -->
-
-
-    <section class="hero-section position-relative text-white d-flex align-items-center justify-content-center"
-        style="height: 60vh; background:  center/cover no-repeat;">
-        <div class="position-absolute top-0 start-0 w-100 h-100 bg-dark bg-opacity-50"></div>
-        <h1 class="position-relative z-1 display-3 fw-bold">About Us</h1>
+    <section class="hero-section text-white d-flex align-items-center justify-content-center" style="height: 35vh;">
+        <h1 class="display-3 fw-bold text-warning">About Us</h1>
     </section>
 
     <!-- About Section -->
     <section class="container py-5">
         <div class="row align-items-center g-5">
-            <!-- Image Gallery -->
+            <!-- Single Image with Reduced Height -->
             <div class="col-lg-6">
-                <div class="row g-3">
-                    <div class="col-6">
-                        <img src="images/kala.jpg" class="img-fluid rounded shadow-sm" alt="Team Image 1">
-                    </div>
-                    <div class="col-6">
-                        <img src="images/kala.jpg" class="img-fluid rounded shadow-sm" alt="Team Image 2">
-                    </div>
-                </div>
+                <img src="images/image copy.png" class="img-fluid rounded shadow-sm" alt="Our Team"
+                    style="max-height: 400px; object-fit: cover;">
             </div>
 
             <!-- About Text -->
             <div class="col-lg-6">
-                <h2 class="fw-bold text-warning">Who We Are</h2>
-                <p class="text-secondary fs-5 mt-3">
+                <h2 class="fw-bold text-warning mb-4">Who We Are</h2>
+                <p class="text-secondary fs-5">
                     Kalā Philly Association is a community-driven group committed to celebrating cultural heritage,
                     fostering creativity, and building strong connections among members.
                 </p>
