--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
 
             <div class="form-area">
-                <h2>Contact Us</h2>
+                <h2 class="">Contact Us</h2>
                 <form id="contact-form">
                     <input type="text" name="from_name" placeholder="Full Name" required>
                     <input type="email" name="email" placeholder="Email" required>
