--- a/gallery.html
+++ b/gallery.html
@@ -94,7 +94,7 @@
     </section>
 
     <div class="container">
-        <h1 class="gallery-title">Gallery</h1>
+        <h1 class="gallery-title text-warning">Gallery</h1>
 
         <div class="gallery-grid">
             <section class="event" data-images="kerala-culture.jpg,gallery3.jpg,gallery4.jpg,pulikali.jpeg">
