--- a/team.html
+++ b/team.html
@@ -84,7 +84,7 @@
     </section>
 
     <div class="container team-section text-center">
-        <h1 class="heading mb-5">Meet Our Team</h1>
+        <h1 class="heading mb-5 text-warning">Meet Our Team</h1>
         <div class="row justify-content-center g-5">
             <div class="col-md-4 col-sm-6 team-member">
                 <img src="images/p1.jpg" class="img-fluid rounded-circle team-img" alt="Abraham">
