--- a/upcoming.html
+++ b/upcoming.html
@@ -87,7 +87,7 @@
 
   <section id="events" class="py-5 mb-5 bg-light">
     <div class="container">
-      <h1 class="text-center fw-bold mb-5 text-warning">Upcoming Events</h1>
+      <h1 class="text-center fw-bold mb-5 text-warning" style="color: #b58900;">Upcoming Events</h1>
 
       <div class="row g-5">
         <!-- Event Card 1 -->
