--- a/aboutus.html
+++ b/aboutus.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/aboutus.css" />
     <link rel="stylesheet" href="css/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -82,35 +86,52 @@
     </section>
 
 
+
+
     <!-- Hero Section -->
-    <section class="hero-section text-white d-flex align-items-center justify-content-center" style="height: 35vh;">
-        <h1 class="display-3 fw-bold text-warning">About Us</h1>
-    </section>
-
-    <!-- About Section -->
-    <section class="container py-5">
-        <div class="row align-items-center g-5">
-            <!-- Single Image with Reduced Height -->
-            <div class="col-lg-6">
-                <img src="images/image copy.png" class="img-fluid rounded shadow-sm" alt="Our Team"
-                    style="max-height: 400px; object-fit: cover;">
-            </div>
-
-            <!-- About Text -->
-            <div class="col-lg-6">
-                <h2 class="fw-bold text-warning mb-4">Who We Are</h2>
-                <p class="text-secondary fs-5">
-                    Kalā Philly Association is a community-driven group committed to celebrating cultural heritage,
-                    fostering creativity, and building strong connections among members.
-                </p>
-                <p class="text-secondary fs-5">
-                    Our events, outreach programs, and artistic collaborations reflect our shared passion for culture,
-                    inclusivity, and service. We strive to inspire and unite through cultural expression and collective
-                    action.
-                </p>
-            </div>
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>About Us</h1>
         </div>
     </section>
+
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- About Section -->
+        <section class="about-section">
+            <div class="container">
+                <div class="about-container fade-in">
+                    <div class="row align-items-center g-5">
+                        <!-- Image -->
+                        <div class="col-lg-6">
+                            <div class="about-image-wrapper">
+                                <img src="images/image copy.png" class="img-fluid" alt="Our Team"
+                                    onerror="this.src='data:image/svg+xml,&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;600&quot; height=&quot;400&quot; viewBox=&quot;0 0 600 400&quot;&gt;&lt;rect width=&quot;100%&quot; height=&quot;100%&quot; fill=&quot;%23e2e8f0&quot;/&gt;&lt;text x=&quot;50%&quot; y=&quot;50%&quot; font-family=&quot;Arial&quot; font-size=&quot;24&quot; fill=&quot;%234a5568&quot; text-anchor=&quot;middle&quot; dy=&quot;.3em&quot;&gt;Image not found&lt;/text&gt;&lt;/svg&gt;'" />
+                            </div>
+
+                        </div>
+
+                        <!-- Text Content -->
+                        <div class="col-lg-6">
+                            <div class="about-text">
+                                <h2>Who We Are</h2>
+                                <p>
+                                    Kalā Philly Association is a community-driven group committed to celebrating
+                                    cultural heritage, fostering creativity, and building strong connections among
+                                    members.
+                                </p>
+                                <p>
+                                    Our events, outreach programs, and artistic collaborations reflect our shared
+                                    passion for culture, inclusivity, and service. We strive to inspire and unite
+                                    through cultural expression and collective action.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
 
     <footer class="">
@@ -122,6 +143,55 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Intersection Observer for fade-in animations
+            const observerOptions = {
+                threshold: 0.2,
+                rootMargin: '0px 0px -50px 0px'
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('visible');
+                    }
+                });
+            }, observerOptions);
+
+            // Observe fade-in elements
+            document.querySelectorAll('.fade-in').forEach(el => {
+                observer.observe(el);
+            });
+
+            // Header scroll effect
+            let lastScrollTop = 0;
+            window.addEventListener('scroll', () => {
+                const header = document.querySelector('.header');
+                const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+                if (scrollTop > 100) {
+                    header.style.background = 'rgba(255, 255, 255, 0.98)';
+                    header.style.boxShadow = '0 4px 40px rgba(0, 0, 0, 0.15)';
+                } else {
+                    header.style.background = 'rgba(255, 255, 255, 0.95)';
+                    header.style.boxShadow = '0 4px 30px rgba(0, 0, 0, 0.1)';
+                }
+
+                lastScrollTop = scrollTop;
+            });
+
+            // Add subtle parallax effect to hero
+            window.addEventListener('scroll', () => {
+                const scrolled = window.pageYOffset;
+                const hero = document.querySelector('.hero-section');
+                if (hero) {
+                    hero.style.transform = `translateY(${scrolled * 0.5}px)`;
+                }
+            });
+        });
+    </script>
 
 </body>
 
