--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/aboutus.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -55,7 +56,7 @@
                                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#about">About Us</a>
+                                    <a class="nav-link" href="aboutus.html">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -95,12 +96,11 @@
     </section>
 
  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>Latest News & Updates</h1>
-      <p class="lead">Stay informed about our association's activities and announcements</p>
+            <section class="hero-section" style="background: url('images/group.png') center center / cover no-repeat;">
+    <div class="hero-content">
+          <h1 class="">Latest News</h1>
     </div>
-  </section>
+</section>
 
   <!-- News Section -->
   <section class="news-section">
