--- a/aboutus.html
+++ b/aboutus.html
@@ -7,9 +7,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/aboutus.css" />
-    <link rel="stylesheet" href="css/footer.css">
-  
-   
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -89,11 +87,14 @@
 
 
     <!-- Hero Section -->
-    <section class="hero-section">
+
+    <section class="hero-section" style="background: url('images/group.png') center center / cover no-repeat;">
         <div class="hero-content">
             <h1>About Us</h1>
         </div>
     </section>
+
+
 
     <!-- Main Content -->
     <div class="main-content">
@@ -139,6 +140,7 @@
             &copy; 2024 My Website. All rights reserved.
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
