--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/aboutus.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -55,7 +56,7 @@
                                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html#about">About Us</a>
+                                    <a class="nav-link" href="aboutus.html">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -93,6 +94,11 @@
             </div>
         </nav>
     </section>
+            <section class="hero-section" style="background: url('images/group.png') center center / cover no-repeat;">
+    <div class="hero-content">
+          <h1 class="">Contact Us</h1>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <div class="main">
@@ -102,10 +108,7 @@
                 <!-- <a href="membership.html" class="join-btn" target="_blank">Join Us</a> -->
 
             </div>
-
-
-            <div class="form-area">
-                <h2 class="">Contact Us</h2>
+            <div class="form-area">              
                 <form id="contact-form">
                     <input type="text" name="from_name" placeholder="Full Name" required>
                     <input type="email" name="email" placeholder="Email" required>
