--- a/past.html
+++ b/past.html
@@ -45,13 +45,13 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html#about">About Us</a>
+                  <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
 
                 <li class="nav-item">
                   <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown ">
                   <a class="nav-link dropdown-toggle active" href="#events" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Events
@@ -178,10 +178,16 @@
     </div>
   </footer>
 
+    <!-- Bootstrap JS (Optional) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 
 
