--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/team.css" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
+     <link rel="stylesheet" href="css/aboutus.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +25,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                     <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,8 +33,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12">
-                        <a class="navbar-brand text-decoration-none" href="index.html">
+                    <div class="col-12 text-center">
+                        <a class="navbar-brand text-decoration-none justify-content-center" href="index.html">
                             <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
                         </a>
                     </div>
@@ -51,7 +52,7 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         Events
                                     </a>
@@ -61,10 +62,10 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="gallery.html">Gallery</a>
+                                    <a class="nav-link" href="gallery.html">Gallery</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="team.html">Team</a>
+                                    <a class="nav-link active" href="team.html">Team</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="news.html">News</a>
@@ -82,9 +83,15 @@
             </div>
         </nav>
     </section>
+    <!-- Hero Section -->
 
+<section class="hero-section" style="background: url('images/group.png') center center / cover no-repeat;">
+    <div class="hero-content">
+        <h1 class="heading mb-5">Meet Our Team</h1>
+    </div>
+</section>
     <div class="container team-section text-center">
-        <h1 class="heading mb-5 text-warning">Meet Our Team</h1>
+        
         <div class="row justify-content-center g-5">
             <div class="col-md-4 col-sm-6 team-member">
                 <img src="images/p1.jpg" class="img-fluid rounded-circle team-img" alt="Abraham">
@@ -126,13 +133,28 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    <!-- Bootstrap JS (Optional) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+<script>AOS.init();</script>
+<script>
+  document.querySelectorAll('.navbar-nav .nav-link').forEach(link => {
+    link.addEventListener('click', () => {
+      const navbar = document.querySelector('.navbar-collapse');
+      if (navbar.classList.contains('show')) {
+        new bootstrap.Collapse(navbar).hide();
+      }
+    });
+  });
+</script>
+
 
 
 </body>
