--- a/membership.html
+++ b/membership.html
@@ -131,6 +131,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
+<body>
+    
     <!-- Navigation -->
     <section class="header">
         <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
@@ -195,14 +197,15 @@
     </section>
 
     <!-- Hero Section -->
-    <section class="membership-hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">Join KALAA</h1>
-                <p class="hero-subtitle">Become part of Delaware Valley's vibrant Malayali community and celebrate our rich cultural heritage together</p>
-            </div>
+<section class="membership-hero" style="background-image: url('images/group.png'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 100px 0; color: white;">
+    <div class="container">
+        <div class="hero-content">
+            <h1 class="hero-title">Join KALAA</h1>
+            <p class="hero-subtitle">Become part of Delaware Valley's vibrant Malayali community and celebrate our rich cultural heritage together</p>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Membership Information -->
     <div class="container">
@@ -340,12 +343,11 @@
         <button class="join-btn" onclick="resetForm()" style="margin: 20px auto 0;">Submit Another Application</button>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="p-3">
-            &copy; 2024 KALAA - Malayali Association of Delaware Valley. All rights reserved.
-        </div>
-    </footer>
+        <footer class="">
+            <div class="p-3">
+                &copy; 2024 CHRIST INFOTECH. All rights reserved.
+            </div>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -434,3 +436,6 @@
             });
         });
     </script>
+    
+    </body>
+    </html>
